src/Samples/Common/Views/Errors/MarkupControlPropertiesSameName.dotcontrol
@viewModel object

@property int MyProperty
@property bool MyProperty

{{value: _control.MyProperty}}
